--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   db:
     image: postgres:15
@@ -14,11 +12,11 @@ services:
     networks:
       - suzoo_net
     healthcheck:
-      test: ["CMD-SHELL","pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
       interval: 10s
       timeout: 10s
       retries: 10
-      start_period: 60s  # 給DB更多啟動時間
+      start_period: 60s
 
   geth:
     build: ./geth
@@ -44,8 +42,7 @@ services:
     volumes:
       - ipfs_data:/data/ipfs
     healthcheck:
-      # 假設 IPFS v0.34.1 仍支援 /api/v0/version
-      test: ["CMD-SHELL","curl -sf http://localhost:5001/api/v0/version || exit 1"]
+      test: ["CMD-SHELL", "curl -sf http://localhost:5001/api/v0/version || exit 1"]
       interval: 10s
       timeout: 10s
       retries: 10
@@ -68,7 +65,7 @@ services:
     expose:
       - "3000"
     healthcheck:
-      test: ["CMD","curl","-sf","http://localhost:3000/health"]
+      test: ["CMD", "curl", "-sf", "http://localhost:3000/health"]
       interval: 10s
       timeout: 10s
       retries: 10
@@ -125,7 +122,6 @@ services:
       context: ./nginx
       dockerfile: Dockerfile
     container_name: suzoo_nginx
-    # 依賴 front, express, fastapi, crawler 全部healthy，再啟動 Nginx
     depends_on:
       frontend:
         condition: service_started
