--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,68 +1,55 @@
 user  nginx;
 worker_processes  auto;
 
-error_log  /var/log/nginx/error.log warn;
-pid        /var/run/nginx.pid;
-
 events {
-    worker_connections  1024;
+  worker_connections 1024;
 }
 
 http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
+  include       mime.types;
+  sendfile      on;
+  keepalive_timeout  65;
 
-    sendfile        on;
-    keepalive_timeout  65;
-    server_tokens off;
+  upstream express_upstream {
+    server express:3000;
+  }
+  upstream frontend_upstream {
+    server frontend:80;
+  }
 
-    # 前端 + API 反向代理範例
-    upstream frontend_service {
-        server frontend:3001;
-    }
-    upstream express_service {
-        server express:3000;
-    }
-    upstream fastapi_service {
-        server fastapi:8000;
-    }
+  server {
+    listen 80;
+    server_name _;
 
-    server {
-        listen 80;
-        server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
-
-        # 自動轉 HTTPS
-        return 301 https://$host$request_uri;
+    location /api/ {
+      proxy_pass http://express_upstream/;
+      proxy_http_version 1.1;
+      proxy_set_header Host $host;
     }
 
-    server {
-        listen 443 ssl;
-        server_name suzookaizokuhunter.com www.suzookaizokuhunter.com;
-
-        # SSL 憑證路徑
-        ssl_certificate /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
-
-        location / {
-            proxy_pass http://frontend_service;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-        }
-
-        # Express API
-        location /api/ {
-            proxy_pass http://express_service;
-            proxy_http_version 1.1;
-            proxy_set_header X-Forwarded-For $remote_addr;
-            proxy_set_header Host $host;
-        }
-
-        # FastAPI (若需要可分路徑)
-        location /py/ {
-            proxy_pass http://fastapi_service;
-        }
+    # 前端 (React) 預設路徑
+    location / {
+      proxy_pass http://frontend_upstream/;
+      proxy_http_version 1.1;
+      proxy_set_header Host $host;
     }
+  }
+
+  # 如果要 SSL，將下列段落取消註解
+  # server {
+  #   listen 443 ssl;
+  #   server_name suzookaizokuhunter.com;
+  #   ssl_certificate /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
+  #   ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
+  #
+  #   location /api/ {
+  #     proxy_pass http://express_upstream/;
+  #     ...
+  #   }
+  #
+  #   location / {
+  #     proxy_pass http://frontend_upstream/;
+  #     ...
+  #   }
+  # }
 }
