--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,15 +1,17 @@
 {
-   "name": "suzookaizokuhunter-frontend-vfinal",
-   "version": "1.0.0",
-   "scripts": {
-     "start": "react-scripts start",
-     "build": "react-scripts build"
-   },
-   "dependencies": {
-     "react": "^18.2.0",
-     "react-dom": "^18.2.0",
-     "react-router-dom": "^6.8.2",
-     "react-scripts": "5.0.1",
-     "gsap": "^3.12.0"
-   }
- }
+  "name": "suzookaizokuhunter-frontend-vvs",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "react-scripts start", 
+    "build": "react-scripts build"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.2",
+    "react-scripts": "5.0.1",
+    "gsap": "^3.12.0",
+    "react-i18next": "^11.18.2",
+    "i18next": "^22.4.6"
+  }
+}
