--- a/express/package.json
+++ b/express/package.json
@@ -1,17 +1,22 @@
 {
-   "name": "suzookaizokuhunter-frontend-vfinal",
-   "version": "1.0.0",
-   "scripts": {
-     "start": "react-scripts start",
-     "build": "react-scripts build"
-   },
-   "dependencies": {
-     "react": "^18.2.0",
-     "react-dom": "^18.2.0",
-     "react-router-dom": "^6.8.2",
-     "react-scripts": "5.0.1",
-     "gsap": "^3.12.0",
-     "express": "^4.18.2",
-     "cors": "^2.8.5"
-   }
- }
+  "name": "suzookaizokuhunter-express-vss",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express-rate-limit": "^6.7.0",
+    "bcrypt": "^5.1.0",
+    "axios": "^1.3.6",
+    "cloudinary": "^1.32.0",
+    "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.9.1",
+    "multer": "^1.4.5-lts.1",
+    "sequelize": "^6.29.3",
+    "pg": "^8.9.0",
+    "crypto": "1.0.1"
+  }
+}
