--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "axios": "^1.3.6",
     "gsap": "^3.12.0",
     "react-i18next": "^11.18.2",
     "i18next": "^22.4.6"
