--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -11,10 +11,4 @@ COPY nginx.conf /etc/nginx/nginx.conf
 EXPOSE 80
 EXPOSE 443
 
-CMD [
-  "sh", "-c",
-  "/wait-for-it.sh express:3000 --timeout=300 --strict && \
-   /wait-for-it.sh crawler:8081 --timeout=300 --strict && \
-   /wait-for-it.sh fastapi:8000 --timeout=300 --strict && \
-   nginx -g 'daemon off;'"
-]
+CMD ["sh", "-c", "/wait-for-it.sh express:3000 --timeout=300 --strict && /wait-for-it.sh crawler:8081 --timeout=300 --strict && /wait-for-it.sh fastapi:8000 --strict && nginx -g 'daemon off;'"]
