--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,6 +42,7 @@ services:
     volumes:
       - ipfs_data:/data/ipfs
     healthcheck:
+      # Healthcheck 需 curl -sf 連到 localhost:5001
       test: ["CMD-SHELL", "curl -sf http://localhost:5001/api/v0/version || exit 1"]
       interval: 10s
       timeout: 10s
