--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,8 +41,6 @@ services:
       - "8080:8080"
     volumes:
       - ipfs_data:/data/ipfs
-    healthcheck:
-      disable: true
 
   express:
     build: ./express
@@ -56,8 +54,8 @@ services:
         condition: service_started
     networks:
       - suzoo_net
-    expose:
-      - "3000"
+    ports:
+      - "3000:3000"  # 明確映射主機端口
     healthcheck:
       test: ["CMD", "curl", "-sf", "http://localhost:3000/health"]
       interval: 10s
@@ -75,8 +73,8 @@ services:
         condition: service_healthy
     networks:
       - suzoo_net
-    expose:
-      - "8000"
+    ports:
+      - "8000:8000"  # 明確映射主機端口
     healthcheck:
       test: ["CMD", "curl", "-sf", "http://localhost:8000/health"]
       interval: 10s
@@ -91,8 +89,8 @@ services:
       - .env
     networks:
       - suzoo_net
-    expose:
-      - "8081"
+    ports:
+      - "8081:8081"  # 明確映射主機端口
     healthcheck:
       test: ["CMD", "curl", "-sf", "http://localhost:8081/health"]
       interval: 10s
@@ -107,8 +105,8 @@ services:
       - .env
     networks:
       - suzoo_net
-    expose:
-      - "80"
+    ports:
+      - "3001:80"  # 容器內 80 映射到主機 3001
 
   nginx:
     build:
@@ -128,9 +126,6 @@ services:
       - suzoo_net
     ports:
       - "80:80"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./nginx/wait-for-it.sh:/wait-for-it.sh
     restart: unless-stopped
 
 volumes:
