--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,54 +2,43 @@ user  nginx;
 worker_processes  auto;
 
 events {
-  worker_connections 1024;
+  worker_connections  1024;
 }
 
 http {
-  include       mime.types;
-  sendfile      on;
+  include       /etc/nginx/mime.types;
+  sendfile        on;
   keepalive_timeout  65;
 
+  # Upstream 服務設定（名稱對應 docker-compose 的服務名）
   upstream express_upstream {
-    server express:3000;
+    server suzoo_express:3000;  # 使用容器名稱而非服務名
   }
+
   upstream frontend_upstream {
-    server frontend:80;
+    server suzoo_frontend:80;  # 使用容器名稱
   }
 
   server {
     listen 80;
-    server_name _;
+    server_name localhost;
 
+    # 反向代理到 Express
     location /api/ {
       proxy_pass http://express_upstream/;
       proxy_http_version 1.1;
       proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
 
-    # 前端 (React) 預設路徑
+    # 反向代理到前端
     location / {
       proxy_pass http://frontend_upstream/;
       proxy_http_version 1.1;
       proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
   }
-
-  # 如果要 SSL，將下列段落取消註解
-  # server {
-  #   listen 443 ssl;
-  #   server_name suzookaizokuhunter.com;
-  #   ssl_certificate /etc/letsencrypt/live/suzookaizokuhunter.com/fullchain.pem;
-  #   ssl_certificate_key /etc/letsencrypt/live/suzookaizokuhunter.com/privkey.pem;
-  #
-  #   location /api/ {
-  #     proxy_pass http://express_upstream/;
-  #     ...
-  #   }
-  #
-  #   location / {
-  #     proxy_pass http://frontend_upstream/;
-  #     ...
-  #   }
-  # }
 }
