--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: "3.8"
+
 services:
   db:
     image: postgres:15
@@ -12,11 +14,11 @@ services:
     networks:
       - suzoo_net
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      test: ["CMD-SHELL","pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
       interval: 10s
       timeout: 10s
       retries: 10
-      start_period: 60s
+      start_period: 30s
 
   geth:
     build: ./geth
@@ -29,9 +31,15 @@ services:
       - "30303:30303/udp"
     volumes:
       - geth_data:/root/.ethereum
+    healthcheck:
+      test: ["CMD-SHELL","curl -sf http://localhost:8545 || exit 1"]
+      interval: 10s
+      timeout: 10s
+      retries: 10
+      start_period: 30s
 
   ipfs:
-    image: ipfs/kubo:latest
+    build: ./ipfs
     container_name: suzoo_ipfs
     networks:
       - suzoo_net
@@ -41,6 +49,12 @@ services:
       - "8080:8080"
     volumes:
       - ipfs_data:/data/ipfs
+    healthcheck:
+      test: ["CMD-SHELL","curl -sf http://localhost:5001/api/v0/version || exit 1"]
+      interval: 10s
+      timeout: 10s
+      retries: 10
+      start_period: 30s
 
   express:
     build: ./express
@@ -51,17 +65,19 @@ services:
       db:
         condition: service_healthy
       geth:
-        condition: service_started
+        condition: service_healthy
+      ipfs:
+        condition: service_healthy
     networks:
       - suzoo_net
-    ports:
-      - "3000:3000"  # 明確映射主機端口
+    expose:
+      - "3000"
     healthcheck:
-      test: ["CMD", "curl", "-sf", "http://localhost:3000/health"]
+      test: ["CMD","curl","-sf","http://localhost:3000/health"]
       interval: 10s
       timeout: 10s
       retries: 10
-      start_period: 60s
+      start_period: 30s
 
   fastapi:
     build: ./fastapi
@@ -73,14 +89,14 @@ services:
         condition: service_healthy
     networks:
       - suzoo_net
-    ports:
-      - "8000:8000"  # 明確映射主機端口
+    expose:
+      - "8000"
     healthcheck:
-      test: ["CMD", "curl", "-sf", "http://localhost:8000/health"]
+      test: ["CMD","curl","-sf","http://localhost:8000/health"]
       interval: 10s
       timeout: 10s
       retries: 10
-      start_period: 60s
+      start_period: 30s
 
   crawler:
     build: ./crawler
@@ -89,14 +105,14 @@ services:
       - .env
     networks:
       - suzoo_net
-    ports:
-      - "8081:8081"  # 明確映射主機端口
+    expose:
+      - "8081"
     healthcheck:
-      test: ["CMD", "curl", "-sf", "http://localhost:8081/health"]
+      test: ["CMD","curl","-sf","http://localhost:8081/health"]
       interval: 10s
       timeout: 10s
       retries: 10
-      start_period: 60s
+      start_period: 30s
 
   frontend:
     build: ./frontend
@@ -105,8 +121,14 @@ services:
       - .env
     networks:
       - suzoo_net
-    ports:
-      - "3001:80"  # 容器內 80 映射到主機 3001
+    expose:
+      - "80"
+    healthcheck:
+      test: ["CMD-SHELL","curl -sf http://localhost || exit 1"]
+      interval: 10s
+      timeout: 10s
+      retries: 10
+      start_period: 30s
 
   nginx:
     build:
@@ -114,18 +136,25 @@ services:
       dockerfile: Dockerfile
     container_name: suzoo_nginx
     depends_on:
-      frontend:
-        condition: service_started
       express:
+        condition: service_healthy
+      crawler:
         condition: service_healthy
       fastapi:
         condition: service_healthy
-      crawler:
+      frontend:
         condition: service_healthy
     networks:
       - suzoo_net
     ports:
       - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/wait-for-it.sh:/wait-for-it.sh
+      # 若尚未安裝 SSL，以下先註解或移除
+      # - /etc/letsencrypt/live/suzookaizokuhunter.com:/etc/letsencrypt/live/suzookaizokuhunter.com:ro
+      # - /etc/letsencrypt/archive/suzookaizokuhunter.com:/etc/letsencrypt/archive/suzookaizokuhunter.com:ro
     restart: unless-stopped
 
 volumes:
