--- a/express/package.json
+++ b/express/package.json
@@ -1,22 +1,23 @@
 {
-  "name": "suzookaizokuhunter-express-vvs",
+  "name": "kaishield-express",
   "version": "1.0.0",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express-rate-limit": "^6.7.0",
-    "bcrypt": "^5.1.0",
     "axios": "^1.3.6",
+    "bcrypt": "^5.1.0",
     "cloudinary": "^1.32.0",
+    "cors": "^2.8.5",
+    "crypto": "1.0.1",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
     "jsonwebtoken": "^8.5.1",
-    "nodemailer": "^6.9.1",
     "multer": "^1.4.5-lts.1",
-    "sequelize": "^6.29.3",
+    "nodemailer": "^6.9.1",
     "pg": "^8.9.0",
-    "crypto": "1.0.1"
+    "sequelize": "^6.29.3",
+    "web3": "^1.8.2" 
   }
 }
