--- a/fastapi/requirements.txt
+++ b/fastapi/requirements.txt
@@ -1,8 +1,7 @@
-fastapi==0.95.0
-uvicorn==0.21.1
+fastapi==0.95.2
+uvicorn==0.22.0
 requests==2.28.2
-beautifulsoup4==4.12.2
-psycopg2-binary==2.9.6
 python-dotenv==0.21.1
-py-solc-x==1.1.1  # 修正包名和版本
-web3==5.31.3
+pandas==1.5.3
+numpy==1.23.5
+web3==5.31.1
