--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,3 +1,4 @@
+# 建置階段
 FROM node:18 as builder
 WORKDIR /app
 COPY package*.json ./
@@ -5,6 +6,7 @@ RUN npm install
 COPY . .
 RUN npm run build
 
+# 部署階段
 FROM nginx:alpine
 COPY --from=builder /app/build /usr/share/nginx/html
 EXPOSE 80
