--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,18 +1,15 @@
 {
-  "name": "suzookaizokuhunter-frontend-vvs",
+  "name": "kaishield-frontend",
   "version": "1.0.0",
   "scripts": {
-    "start": "react-scripts start", 
+    "start": "react-scripts start",
     "build": "react-scripts build"
   },
   "dependencies": {
+    "axios": "^1.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.2",
-    "react-scripts": "5.0.1",
-    "axios": "^1.3.6",
-    "gsap": "^3.12.0",
-    "react-i18next": "^11.18.2",
-    "i18next": "^22.4.6"
+    "react-router-dom": "^6.11.1",
+    "react-scripts": "5.0.1"
   }
 }
