--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   db:
     image: postgres:15
@@ -8,160 +6,131 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: ${POSTGRES_DB}
+    ports:
+      - "5432:5432"
     volumes:
-      - db_data:/var/lib/postgresql/data
-      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
-    networks:
-      - suzoo_net
+      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
     healthcheck:
-      test: ["CMD-SHELL","pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
-      interval: 10s
-      timeout: 10s
-      retries: 10
-      start_period: 30s
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   geth:
     build: ./geth
     container_name: suzoo_geth
-    networks:
-      - suzoo_net
     ports:
       - "8545:8545"
-      - "30303:30303"
-      - "30303:30303/udp"
     volumes:
-      - geth_data:/root/.ethereum
+      - ./geth/genesis.json:/genesis.json
+    command:
+      - "--http"
+      - "--http.addr"
+      - "0.0.0.0"
+      - "--http.port"
+      - "8545"
+      - "--http.api"
+      - "eth,net,web3,personal"
+      - "--nodiscover"
+      - "--networkid"
+      - "15"
+      - "--syncmode"
+      - "full"
+      - "--mine"
+      - "--miner.threads"
+      - "1"
+      - "--miner.etherbase"
+      - "0x0000000000000000000000000000000000000000"
     healthcheck:
-      test: ["CMD-SHELL","curl -sf http://localhost:8545 || exit 1"]
+      test: ["CMD", "curl", "-f", "http://localhost:8545"]
       interval: 10s
-      timeout: 10s
-      retries: 10
-      start_period: 30s
+      timeout: 5s
+      retries: 5
 
   ipfs:
     build: ./ipfs
     container_name: suzoo_ipfs
-    networks:
-      - suzoo_net
     ports:
-      - "4001:4001"
       - "5001:5001"
-      - "8080:8080"
-    volumes:
-      - ipfs_data:/data/ipfs
     healthcheck:
-      test: ["CMD-SHELL","curl -sf http://localhost:5001/api/v0/version || exit 1"]
+      test: ["CMD", "ipfs", "id"]
       interval: 10s
-      timeout: 10s
-      retries: 10
-      start_period: 30s
+      timeout: 5s
+      retries: 5
 
-  express:
-    build: ./express
-    container_name: suzoo_express
-    env_file:
-      - .env
+  fastapi:
+    build: ./fastapi
+    container_name: suzoo_fastapi
+    ports:
+      - "8000:8000"
     depends_on:
       db:
         condition: service_healthy
       geth:
         condition: service_healthy
-      ipfs:
-        condition: service_healthy
-    networks:
-      - suzoo_net
-    expose:
-      - "3000"
+    environment:
+      - BLOCKCHAIN_RPC_URL=${BLOCKCHAIN_RPC_URL}
     healthcheck:
-      test: ["CMD","curl","-sf","http://localhost:3000/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
       interval: 10s
-      timeout: 10s
-      retries: 10
-      start_period: 30s
+      timeout: 5s
+      retries: 5
 
-  fastapi:
-    build: ./fastapi
-    container_name: suzoo_fastapi
-    env_file:
-      - .env
+  express:
+    build: ./express
+    container_name: suzoo_express
+    ports:
+      - "3000:3000"
     depends_on:
       db:
         condition: service_healthy
-    networks:
-      - suzoo_net
-    expose:
-      - "8000"
+      geth:
+        condition: service_healthy
+      fastapi:
+        condition: service_healthy
+    environment:
+      - PORT=3000
     healthcheck:
-      test: ["CMD","curl","-sf","http://localhost:8000/health"]
+      test: ["CMD-SHELL", "curl -f http://localhost:3000/health || exit 1"]
       interval: 10s
-      timeout: 10s
-      retries: 10
-      start_period: 30s
+      timeout: 5s
+      retries: 5
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   crawler:
     build: ./crawler
     container_name: suzoo_crawler
-    env_file:
-      - .env
-    networks:
-      - suzoo_net
-    expose:
-      - "8081"
-    healthcheck:
-      test: ["CMD","curl","-sf","http://localhost:8081/health"]
-      interval: 10s
-      timeout: 10s
-      retries: 10
-      start_period: 30s
+    depends_on:
+      express:
+        condition: service_started
+    environment:
+      - RAPIDAPI_KEY=${RAPIDAPI_KEY}
 
   frontend:
     build: ./frontend
     container_name: suzoo_frontend
-    env_file:
-      - .env
-    networks:
-      - suzoo_net
-    expose:
-      - "80"
-    healthcheck:
-      test: ["CMD-SHELL","curl -sf http://localhost || exit 1"]
-      interval: 10s
-      timeout: 10s
-      retries: 10
-      start_period: 30s
+    ports:
+      - "3001:3000"
+    environment:
+      - NODE_ENV=production
 
   nginx:
-    build:
-      context: ./nginx
-      dockerfile: Dockerfile
+    build: ./nginx
     container_name: suzoo_nginx
+    ports:
+      - "80:80"
+      - "443:443"
     depends_on:
       express:
-        condition: service_healthy
-      crawler:
         condition: service_healthy
       fastapi:
         condition: service_healthy
       frontend:
-        condition: service_healthy
-    networks:
-      - suzoo_net
-    ports:
-      - "80:80"
-      - "443:443"
+        condition: service_started
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/wait-for-it.sh:/wait-for-it.sh
-      # 若尚未安裝 SSL，以下先註解或移除
-      # - /etc/letsencrypt/live/suzookaizokuhunter.com:/etc/letsencrypt/live/suzookaizokuhunter.com:ro
-      # - /etc/letsencrypt/archive/suzookaizokuhunter.com:/etc/letsencrypt/archive/suzookaizokuhunter.com:ro
-    restart: unless-stopped
-
-volumes:
-  db_data:
-  geth_data:
-  ipfs_data:
-
-networks:
-  suzoo_net:
-    driver: bridge
