--- a/express/package.json
+++ b/express/package.json
@@ -1,6 +1,7 @@
 {
   "name": "kaishield-express",
   "version": "1.0.0",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
@@ -9,7 +10,6 @@
     "bcrypt": "^5.1.0",
     "cloudinary": "^1.32.0",
     "cors": "^2.8.5",
-    "crypto": "1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
@@ -18,6 +18,9 @@
     "nodemailer": "^6.9.1",
     "pg": "^8.9.0",
     "sequelize": "^6.29.3",
-    "web3": "^1.8.2" 
+    "web3": "^1.8.2",
+    "stripe": "^11.18.0",
+    "socket.io": "^4.5.4",
+    "ipfs-http-client": "^60.0.0"
   }
 }
