--- a/crawler/Dockerfile
+++ b/crawler/Dockerfile
@@ -1,7 +1,7 @@
+# crawler/Dockerfile
 FROM node:18-alpine
 WORKDIR /app
-COPY package*.json ./
-RUN npm install --production
+COPY package.json package-lock.json* ./
+RUN npm install --production && npm cache clean --force
 COPY . .
-EXPOSE 8081
 CMD ["node", "index.js"]
