--- a/fastapi/Dockerfile
+++ b/fastapi/Dockerfile
@@ -1,8 +1,8 @@
+# fastapi/Dockerfile
 FROM python:3.10-slim
-
 WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 COPY . .
 EXPOSE 8000
-CMD ["python", "main.py"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
