--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,13 +1,14 @@
-# 建置階段
-FROM node:18 as builder
+# frontend/Dockerfile
+FROM node:18-alpine AS builder
 WORKDIR /app
-COPY package*.json ./
+COPY package.json package-lock.json* ./
 RUN npm install
 COPY . .
 RUN npm run build
 
-# 部署階段
-FROM nginx:alpine
-COPY --from=builder /app/build /usr/share/nginx/html
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+FROM node:18-alpine
+WORKDIR /app
+RUN npm install -g serve
+COPY --from=builder /app/build ./build
+EXPOSE 3000
+CMD ["serve", "-s", "build", "-l", "3000"]
