--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,44 +1,43 @@
-user  nginx;
-worker_processes  auto;
-
-events {
-  worker_connections  1024;
-}
-
+worker_processes 1;
+events { worker_connections 1024; }
 http {
-  include       /etc/nginx/mime.types;
-  sendfile        on;
-  keepalive_timeout  65;
+    include mime.types;
+    default_type application/octet-stream;
+    sendfile on;
+    keepalive_timeout 65;
 
-  # Upstream 服務設定（名稱對應 docker-compose 的服務名）
-  upstream express_upstream {
-    server suzoo_express:3000;  # 使用容器名稱而非服務名
-  }
+    server {
+        listen 80;
+        listen 443 ssl;
+        server_name _;
 
-  upstream frontend_upstream {
-    server suzoo_frontend:80;  # 使用容器名稱
-  }
+        ssl_certificate /etc/ssl/certs/kaishield.crt;
+        ssl_certificate_key /etc/ssl/private/kaishield.key;
 
-  server {
-    listen 80;
-    server_name localhost;
+        # 安全 HTTP 頭部
+        add_header X-Content-Type-Options "nosniff";
+        add_header X-Frame-Options "DENY";
 
-    # 反向代理到 Express
-    location /api/ {
-      proxy_pass http://express_upstream/;
-      proxy_http_version 1.1;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        location /socket.io/ {
+            proxy_pass http://express:3000/socket.io/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+        }
+
+        location /api/ {
+            proxy_pass http://express:3000/api/;
+            proxy_set_header Host $host;
+        }
+
+        location /fastapi/ {
+            proxy_pass http://fastapi:8000/;
+            proxy_set_header Host $host;
+        }
+
+        location / {
+            proxy_pass http://frontend:3000/;
+            proxy_set_header Host $host;
+        }
     }
-
-    # 反向代理到前端
-    location / {
-      proxy_pass http://frontend_upstream/;
-      proxy_http_version 1.1;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
-  }
 }
