--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,14 +1,8 @@
 # frontend/Dockerfile
-FROM node:18-alpine AS builder
-WORKDIR /app
-COPY package.json package-lock.json* ./
-RUN npm install
-COPY . .
-RUN npm run build
-
 FROM node:18-alpine
 WORKDIR /app
-RUN npm install -g serve
-COPY --from=builder /app/build ./build
+COPY package.json package-lock.json* ./
+RUN npm install && npm cache clean --force
+COPY . .
 EXPOSE 3000
-CMD ["serve", "-s", "build", "-l", "3000"]
+CMD ["npm", "start"]
