--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+version: "3.8"
 services:
   db:
     image: postgres:15
@@ -63,7 +64,7 @@ services:
     environment:
       - BLOCKCHAIN_RPC_URL=${BLOCKCHAIN_RPC_URL}
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      test: ["CMD-SHELL", "curl -f http://localhost:8000/health || exit 1"]
       interval: 10s
       timeout: 5s
       retries: 5
