--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3.8"
 services:
   db:
     image: postgres:15
@@ -17,11 +16,13 @@ services:
       timeout: 5s
       retries: 5
 
-  # ==============================
-  # 移除/放寬 geth 容器的 healthcheck
-  # ==============================
+  # ------------------------------
+  # geth：不使用 healthcheck（或放寬檢查）
+  # ------------------------------
   geth:
-    build: ./geth
+    build:
+      context: ./geth
+      dockerfile: Dockerfile
     container_name: suzoo_geth
     ports:
       - "8545:8545"
@@ -38,10 +39,11 @@ services:
       - "--nodiscover"
       - "--networkid"
       - "15"
-    # 已移除 healthcheck
 
   ipfs:
-    build: ./ipfs
+    build:
+      context: ./ipfs
+      dockerfile: Dockerfile
     container_name: suzoo_ipfs
     ports:
       - "5001:5001"
@@ -52,7 +54,9 @@ services:
       retries: 5
 
   fastapi:
-    build: ./fastapi
+    build:
+      context: ./fastapi
+      dockerfile: Dockerfile
     container_name: suzoo_fastapi
     ports:
       - "8000:8000"
@@ -70,7 +74,9 @@ services:
       retries: 5
 
   express:
-    build: ./express
+    build:
+      context: ./express
+      dockerfile: Dockerfile
     container_name: suzoo_express
     ports:
       - "3000:3000"
@@ -90,7 +96,9 @@ services:
       retries: 5
 
   crawler:
-    build: ./crawler
+    build:
+      context: ./crawler
+      dockerfile: Dockerfile
     container_name: suzoo_crawler
     depends_on:
       express:
@@ -99,7 +107,9 @@ services:
       - RAPIDAPI_KEY=${RAPIDAPI_KEY}
 
   frontend:
-    build: ./frontend
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
     container_name: suzoo_frontend
     ports:
       - "3002:3000"
@@ -107,7 +117,9 @@ services:
       - NODE_ENV=production
 
   nginx:
-    build: ./nginx
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile
     container_name: suzoo_nginx
     ports:
       - "80:80"
