--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   ###################################################################
   # 1. PostgreSQL (suzoo_postgres)
@@ -8,9 +6,9 @@ services:
     image: postgres:15-alpine
     container_name: suzoo_postgres
     environment:
-      - POSTGRES_USER=${POSTGRES_USER:-postgres}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-postgres}
-      - POSTGRES_DB=${POSTGRES_DB:-suzoo_db}
+      POSTGRES_USER: "${POSTGRES_USER:-postgres}"
+      POSTGRES_PASSWORD: "${POSTGRES_PASSWORD:-postgres}"
+      POSTGRES_DB: "${POSTGRES_DB:-suzoo_db}"
     volumes:
       - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
       - postgres_data:/var/lib/postgresql/data
@@ -19,7 +17,7 @@ services:
     networks:
       - suzoo_network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}"]
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-postgres} -d ${POSTGRES_DB:-suzoo_db} || exit 1"]
       interval: 5s
       timeout: 5s
       retries: 5
@@ -35,8 +33,8 @@ services:
     networks:
       - suzoo_network
     ports:
-      - "8545:8545"
-      - "30303:30303"
+      - "8545:8545"     # RPC
+      - "30303:30303"   # P2P
     volumes:
       - geth_data:/geth/data
       - ./geth/keystore:/geth/keystore
@@ -51,6 +49,8 @@ services:
   # 3. IPFS (suzoo_ipfs)
   ###################################################################
   suzoo_ipfs:
+    # 若您已有 ./ipfs/Dockerfile，可改成 `build: ./ipfs`
+    # 若要使用官方映像，請保持 image: ipfs/go-ipfs
     image: ipfs/go-ipfs:latest
     container_name: suzoo_ipfs
     networks:
@@ -60,6 +60,13 @@ services:
       - "8080:8080"
     volumes:
       - ipfs_data:/data/ipfs
+    # 如需 healthcheck，可自行加
+    # healthcheck:
+    #   test: ["CMD-SHELL","curl -sf http://localhost:5001/api/v0/version || exit 1"]
+    #   interval: 10s
+    #   timeout: 10s
+    #   retries: 10
+    #   start_period: 30s
 
   ###################################################################
   # 4. FastAPI 後端服務 (suzoo_fastapi)
@@ -77,10 +84,10 @@ services:
       suzoo_ipfs:
         condition: service_started
     environment:
-      - DATABASE_URL=${DATABASE_URL}
-      - ETH_RPC_URL=${ETH_RPC_URL}
-      - IPFS_API_URL=${IPFS_API_URL}
-      - NODE_ENV=${NODE_ENV}
+      DATABASE_URL: "${DATABASE_URL}"
+      ETH_RPC_URL: "${ETH_RPC_URL}"           # 新的RPC地址
+      IPFS_API_URL: "${IPFS_API_URL}"
+      NODE_ENV: "${NODE_ENV:-production}"
     networks:
       - suzoo_network
     expose:
@@ -106,16 +113,16 @@ services:
       suzoo_geth:
         condition: service_healthy
     environment:
-      - DATABASE_URL=${DATABASE_URL}
-      - ETH_RPC_URL=${ETH_RPC_URL}
-      - IPFS_API_URL=${IPFS_API_URL}
-      - JWT_SECRET=${JWT_SECRET}
-      - CLOUDINARY_CLOUD_NAME=${CLOUDINARY_CLOUD_NAME}
-      - CLOUDINARY_API_KEY=${CLOUDINARY_API_KEY}
-      - CLOUDINARY_API_SECRET=${CLOUDINARY_API_SECRET}
-      - RAPIDAPI_KEY=${RAPIDAPI_KEY}
-      - NODE_ENV=${NODE_ENV}
-      - PORT=3000
+      DATABASE_URL: "${DATABASE_URL}"
+      ETH_RPC_URL: "${ETH_RPC_URL}"      # 連接私有鏈
+      IPFS_API_URL: "${IPFS_API_URL}"
+      JWT_SECRET: "${JWT_SECRET}"
+      CLOUDINARY_CLOUD_NAME: "${CLOUDINARY_CLOUD_NAME}"
+      CLOUDINARY_API_KEY: "${CLOUDINARY_API_KEY}"
+      CLOUDINARY_API_SECRET: "${CLOUDINARY_API_SECRET}"
+      RAPIDAPI_KEY: "${RAPIDAPI_KEY}"
+      NODE_ENV: "${NODE_ENV:-production}"
+      PORT: "3000"
     networks:
       - suzoo_network
     expose:
@@ -127,11 +134,11 @@ services:
       retries: 5
 
   ###################################################################
-  # 6. 爬蟲 (suzoo_crawler) - 修正此部分
+  # 6. 爬蟲 (suzoo_crawler)
   ###################################################################
-  suzoo_crawler:  # 注意服務名稱是否拼寫正確
+  suzoo_crawler:
     build:
-      context: ./crawler  # 確保路徑正確
+      context: ./crawler
       dockerfile: Dockerfile
     container_name: suzoo_crawler
     depends_on:
@@ -140,11 +147,18 @@ services:
       suzoo_postgres:
         condition: service_healthy
     environment:
-      - ETH_RPC_URL=${ETH_RPC_URL}
-      - DATABASE_URL=${DATABASE_URL}
-      - RAPIDAPI_KEY=${RAPIDAPI_KEY}
+      ETH_RPC_URL: "${ETH_RPC_URL}"
+      DATABASE_URL: "${DATABASE_URL}"
+      RAPIDAPI_KEY: "${RAPIDAPI_KEY}"
     networks:
       - suzoo_network
+    expose:
+      - "8081"
+    # 可加 healthcheck & ports if needed
+    # ports:
+    #   - "8081:8081"
+    # healthcheck:
+    #   test: ["CMD-SHELL", "curl -s http://localhost:8081/health | grep 'ok'"]
 
   ###################################################################
   # 7. React 前端 (suzoo_frontend)
@@ -157,7 +171,7 @@ services:
     networks:
       - suzoo_network
     environment:
-      - NODE_ENV=${NODE_ENV}
+      NODE_ENV: "${NODE_ENV:-production}"
     volumes:
       - ./frontend/build:/app/build
 
@@ -170,9 +184,12 @@ services:
       dockerfile: Dockerfile
     container_name: suzoo_nginx
     depends_on:
-      - suzoo_express
-      - suzoo_fastapi
-      - suzoo_frontend
+      suzoo_express:
+        condition: service_healthy
+      suzoo_fastapi:
+        condition: service_healthy
+      suzoo_frontend:
+        condition: service_started
     networks:
       - suzoo_network
     ports:
